fix: Page nav overflow style

--- a/clients/home/pages/app-details/page-nav/index.scss
+++ b/clients/home/pages/app-details/page-nav/index.scss
@@ -4,6 +4,7 @@
   min-width: 236px;
   max-width: 236px;
   border-right: 1px solid var(--gray-300);
+  overflow: auto;
 }
 
 .app-page-add-group {
